[package]
name = "meadowlark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 0
codegen-units = 8

[profile.release.package."*"]
opt-level = 1

[dependencies]
iced = {version="0.12.1", features =[ "canvas", "tokio", "debug"]}
